# hc-doc-ai-wh-poc

./: .gitignore  README.md
backend/: .dockerignore  .env.template  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  package-lock.json  package.json  pyproject.toml  tsconfig.json
backend/backend/: __init__.py  __main__.py  config.py  error_handlers.py
backend/backend/documents/blueprints/: __init__.py
backend/backend/documents/blueprints/documents/: __init__.py  documents_blueprint.py
backend/backend/documents/models/: __init__.py  batch.py  document.py
backend/backend/documents/schemas/: __init__.py  batch.py  document.py
backend/backend/documents/services/: __init__.py
backend/backend/documents/services/documents/: __init__.py  documents_service.py
backend/backend/health_check/: health_check_blueprint.py
backend/backend/health_check/blueprints/: __init__.py
backend/backend/health_check/blueprints/health_check/: __init__.py  health_check_blueprint.py
backend/src/: app.ts  index.ts
backend/src/common/enums/: index.ts  node-env.ts
backend/src/common/errors/: already-exists-error.ts  forbidden-error.ts  index.ts  not-found-error.ts  unauthorized-error.ts
backend/src/config/: config.ts
backend/src/error-handler/: index.ts
backend/src/health-check/: index.ts
backend/src/health-check/routers/: index.ts
backend/src/health-check/routers/health-check-router/: health-check-router.ts
backend/src/types/express/: index.d.ts
classify-documents-cloud-function/: .gitignore  main.py  pyproject.toml
classify-documents-cloud-function/classify_documents/: config.py
data/: schema_creation.json
doc-ai-cde-processor-training/: Makefile  config.py  doc_ai_processor_training.py  pyproject.toml  requirements.txt  run.sh
doc-ai-cde-processor-training/data/: schema_creation.json
doc-ai-cde-processor-training/doc_ai_cde_processor_training/: __init__.py  __main__.py
doc-ai-cde-processor-training/tagged_data/exported-cde-tagged-data/test/38687c454873d103/: HF8-12-542-6_1.json
doc-ai-cde-processor-training/tagged_data/exported-cde-tagged-data/test/38687c454873d125/: OF15-88-407 VOL 1_1.json
doc-ai-cde-processor-training/tagged_data/exported-cde-tagged-data/test/38687c454873da19/: HF3-16-34-19 VOL 1_1.json
doc-ai-cde-processor-training/tagged_data/exported-cde-tagged-data/test/4a93fcdeb84f6071/: HF23-13-56 VOL 1_1.json
doc-ai-cde-processor-training/tagged_data/exported-cde-tagged-data/test/4a93fcdeb84f63b5/: HF23-4-2280-19 VOL 2_1.json
doc-ai-cde-processor-training/tagged_data/exported-cde-tagged-data/test/4a93fcdeb84f6d2d/: HF23-4-30-4 VOL 1_1.json
doc-ai-cde-processor-training/tagged_data/exported-cde-tagged-data/test/4a93fcdeb84f6d57/: HF23-19-10-2 VOL 6_1.json
doc-ai-cde-processor-training/tagged_data/exported-cde-tagged-data/test/4efb82a9e733c17/: HF23-4-3008 vol 1_1.json
doc-ai-cde-processor-training/tagged_data/exported-cde-tagged-data/test/4efb82a9e733d4d/: HF2-88-6-3 VOL 1_1.json
docs/: deployment-manual.md  deployment.md
extract-pdf-first-page-cloud-function/: .env.template  Makefile  README.md  main.py  pyproject.toml  requirements.txt
extract-pdf-first-page-cloud-function/extract_pdf_first_page/: __init__.py  config.py
(+360 files in other folders)
