[tool.poetry]
name = "classify-documents-cloud-function"
version = "0.1.0"
description = "Health Canada - DocAI Warehouse POC - Classify Documents Cloud Function"
authors = ["Marcus Vinicius Monteiro de Souza <marcus.souza@improving.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
functions-framework = "^3.5.0"
google-cloud-storage = "^2.14.0"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
